--- a/mainRAGevaluation.ipynb
+++ b/mainRAGevaluation.ipynb
@@ -1479,6 +1479,7 @@
     "    repo_id = \"openai/chatgpt-4\"\n",
     "    READER_MODEL_NAME = \"gpt-4-1106-preview\"\n",
     "    OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "    \n",
     "elif reader_model == 'Claude':\n",
     "    repo_id = \"Claude-3-sonnet\"\n",
     "    ANTHROPIC_API_TOKEN = os.getenv(\"ANTHROPIC_API_TOKEN\")\n",
@@ -1741,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {
     "id": "jW2nnvUT9jVQ"
    },
@@ -1750,22 +1751,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running evaluation for chunk:200_embeddings:thenlper~gte-small_rerank:True_reader-model:zephyr-7b-beta:\n",
-      "Loading knowledge base embeddings...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_23438/2918242049.py:25: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
-      "  embedding_model = HuggingFaceEmbeddings(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Running evaluation for reader-model:zephyr-7b-beta_rerank:True_embeddings:thenlper~gte-small_chunk:200:\n",
+      "Loading knowledge base embeddings...\n",
       "Running RAG...\n"
      ]
     },
@@ -1773,14 +1760,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/awkwabear/anaconda3/envs/hf/lib/python3.12/site-packages/colbert/utils/amp.py:12: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
-      "  self.scaler = torch.cuda.amp.GradScaler()\n"
+      "/home/awkwabear/anaconda3/envs/hf/lib/python3.12/site-packages/colbert/utils/amp.py:12: FutureWarning:\n",
+      "\n",
+      "`torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12ef2a0655204f16a8804aa6185cd0ba",
+       "model_id": "7436e70ad01b4b58aa4176151652caee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1801,12 +1790,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4025493487d4f61b05e653ce0ecd3b9",
+       "model_id": "7c452652a5a04f16afbf6bccbe456b5d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/156 [00:00<?, ?it/s]"
+       "  0%|          | 0/149 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1816,7 +1805,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running evaluation for chunk:200_embeddings:thenlper~gte-small_rerank:False_reader-model:zephyr-7b-beta:\n",
+      "Running evaluation for reader-model:zephyr-7b-beta_rerank:False_embeddings:thenlper~gte-small_chunk:200:\n",
       "Loading knowledge base embeddings...\n",
       "Running RAG...\n"
      ]
@@ -1824,7 +1813,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d50edc3014604bdebdb5d09f587460cb",
+       "model_id": "567d1d80d52f489db3613249861e8087",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1845,12 +1834,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20646d84f087451cb0748349e72d862e",
+       "model_id": "c2f1262f303f439bbcda15d4f5e652c4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/156 [00:00<?, ?it/s]"
+       "  0%|          | 0/149 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1864,7 +1853,7 @@
     "for chunk_size in [200]:  # Add other chunk sizes (in tokens) as needed\n",
     "    for embeddings in [\"thenlper/gte-small\"]:  # Add other embeddings as needed\n",
     "        for rerank in [True, False]:\n",
-    "            settings_name = f\"chunk:{chunk_size}_embeddings:{embeddings.replace('/', '~')}_rerank:{rerank}_reader-model:{READER_MODEL_NAME}\"\n",
+    "            settings_name = f\"reader-model:{READER_MODEL_NAME}_rerank:{rerank}_embeddings:{embeddings.replace('/', '~')}_chunk:{chunk_size}\"\n",
     "            output_file_name = f\"./output/rag_{settings_name}.json\"\n",
     "            print(f\"Running evaluation for {settings_name}:\")\n",
     "\n",
@@ -1993,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2014,12 +2003,12 @@
    "source": [
     "average_scores = result.groupby(\"settings\")[[f\"eval_score_{evaluator_name}\"]].mean().reset_index()\n",
     "print(average_scores.columns)\n",
-    "print(average_scores.head())\n"
+    "print(average_scores.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2984,7 +2973,7 @@
     "    barmode=\"group\",\n",
     "    yaxis_range=[0, 100],  # Adjusting range to [0, 100] for percentage\n",
     "    title=f\"<b>Accuracy of Different RAG Configurations for 149 Filtered Q/A Pairs evaluated by {evaluator_name}</b>\",\n",
-    "    xaxis_title=\"RAG Settings\",\n",
+    "    xaxis_title=\"Reader Model Settings\",\n",
     "    font=dict(size=11),\n",
     ")\n",
     "\n",
